# oasis-rs

./: .rustfmt.toml  Cargo.toml  README.md
abi_derive/: Cargo.toml  README.md
abi_derive/src/: contract.rs  error.rs  items.rs  json.rs  lib.rs  utils.rs
abi_derive/tests/: Cargo.toml
abi_derive/tests/src/: arrays.rs  contract.rs  erc20.rs  general.rs  lib.rs  multiple_return.rs  payable.rs  strings.rs  trivia.rs
bcfs/: Cargo.toml  README.md
bcfs/proptest-regressions/: tests.txt
bcfs/src/: bcfs.rs  ffi.rs  file.rs  lib.rs  tests.rs
bcfs/src/testing/: ffi.rs  mod.rs
bcfs/tests/nopanic/: Cargo.toml
blockchain-traits/: Cargo.toml  README.md
blockchain-traits/src/: lib.rs
examples/ballot/: Cargo.toml
examples/ballot/src/: lib.rs  main.rs
examples/erc20/: Cargo.toml
examples/erc20/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/messaging/: Cargo.toml  build.rs
examples/messaging/src/: lib.rs  main.rs
examples/sealed-auctions/: Cargo.toml
examples/sealed-auctions/src/: lib.rs  main.rs  types.rs
idl-gen/: Cargo.toml  README.md
idl-gen/src/: dispatcher_gen.rs  error.rs  gen.rs  lib.rs  main.rs  rpc.rs  utils.rs  visitor.rs
macros/: Cargo.toml
macros/src/: contract_derive.rs  contract_macro.rs  lib.rs  utils.rs
macros/tests/: forum.rs
mantle/: Cargo.toml  README.md
mantle-build/: Cargo.toml  README.md
mantle-build/src/: dispatcher_gen.rs  error.rs  import_gen.rs  lib.rs  main.rs  plugin.rs  rpc.rs  utils.rs  visitor.rs
mantle-build/src/dispatcher_gen/: mod.rs  visitor.rs
mantle-build/src/visitor/: hir.rs  mod.rs  syntax.rs
mantle-build/tests/: compiletest.rs
mantle-build/tests/run_pass/: ballot.rs
mantle-build/tests/ui/: bad_default_fn.rs  bad_import.rs  bad_import.stderr  bad_rpc_sig.rs  bad_rpc_sig.stderr  empty_service_macro.rs  empty_service_macro.stderr  generic_state.rs  generic_state.stderr  multi_service_main.rs  multi_service_main.stderr  multiple_defaults.rs  new_bad_ret.rs  new_bad_ret.stderr  new_no_ctx.rs  no_service_derive.rs  no_service_derive.stderr  no_service_impl.rs  non_rpc_type.rs  println_warn.rs  println_warn.stderr  rpc_no_ctx.rs  rpc_no_self.rs  service_name_mismatch.rs  service_name_mismatch.stderr  state_non_pod_type.rs
mantle-macros/: Cargo.toml  README.md
mantle-macros/src/: default_attr.rs  event_derive.rs  lib.rs  rpc.rs  service_attr.rs  service_derive.rs  testing.rs  utils.rs
mantle-macros/tests/: compiletest.rs
mantle-macros/tests/run_pass/: ballot.rs
mantle-macros/tests/ui/: bad_rpc_sig.rs  bad_rpc_sig.stderr  generic_state.rs  multi_service_derive.stderr  new_bad_ret.rs  new_no_ctx.rs  new_no_ctx.stderr  no_service_derive.rs  no_service_derive.stderr  no_service_impl.rs  private_new.rs  private_state.rs  rpc_no_self.rs
mantle-rpc/: Cargo.toml  README.md
mantle-rpc/src/: lib.rs
mantle-rpc/src/import/: error.rs  file_importer.rs  mod.rs  resolve.rs
mantle-rpc/src/importer/: mod.rs
mantle-test/: Cargo.toml  README.md
mantle-test/src/: ext.rs  lib.rs
mantle-types/: Cargo.toml
mantle-types/src/: lib.rs
mantle/src/: build.rs  error.rs  errors.rs  exe.rs  ext.rs  lib.rs  testing.rs  types.rs
mantle/src/backend/: ext.rs  mod.rs  wasi.rs
mantle/tests/: forum.rs
map-vec/: .rustfmt.toml  Cargo.toml  README.md
map-vec/src/: lib.rs  map.rs  set.rs
memchain/: Cargo.toml  README.md
memchain/src/: block.rs  ffi.rs  lib.rs  output.rs  pending_transaction.rs  tests.rs  types.rs
oasis/: Cargo.toml  README.md
oasis-build/: Cargo.toml  README.md
oasis-build/src/: dispatcher_gen.rs  error.rs  import_gen.rs  lib.rs  main.rs  plugin.rs  rpc.rs  utils.rs
oasis-build/src/visitor/: hir.rs  mod.rs  parsed_rpc.rs  syntax.rs
oasis-build/tests/: compiletest.rs
oasis-build/tests/ui/: bad_default_fn.rs  bad_default_fn.stderr  bad_import.rs  bad_import.stderr  bad_rpc_sig.rs  empty_service_macro.rs  empty_service_macro.stderr  generic_state.rs  multi_service_main.rs  multi_service_main.stderr  multiple_defaults.rs  multiple_defaults.stderr  new_bad_ret.rs  new_bad_ret.stderr  new_no_ctx.rs  new_no_ctx.stderr  no_service_derive.rs  no_service_derive.stderr  no_service_impl.rs  no_service_impl.stderr  non_rpc_type.rs  non_rpc_type.stderr  println_warn.rs  rpc_no_ctx.rs  rpc_no_ctx.stderr  rpc_no_self.rs  rpc_no_self.stderr  service_name_mismatch.rs  service_name_mismatch.stderr  state_non_pod_type.rs  state_non_pod_type.stderr
oasis-client/: Cargo.toml  README.md
oasis-client/src/: api.rs  coder.rs  gateway.rs  lib.rs  polling.rs
oasis-client/tests/: gateway.rs
oasis-client/tests/res/: Cargo.toml
oasis-macros/: Cargo.toml  README.md
oasis-macros/src/: abi.rs  contract_attr.rs  contract_derive.rs  contract_macro.rs  default_attr.rs  event_derive.rs  lib.rs  rpc.rs  service_attr.rs  service_derive.rs  testing.rs  utils.rs
oasis-macros/tests/: compiletest.rs  forum.rs
oasis-macros/tests/run_pass/: ballot.rs
oasis-macros/tests/ui/: bad_rpc_sig.rs  bad_rpc_sig.stderr  generic_state.rs  generic_state.stderr  multi_contract_derive.rs  multi_contract_derive.stderr  multi_service_derive.rs  (+24 more)
oasis-rpc/: Cargo.toml  README.md
oasis-rpc/src/: idl.rs  lib.rs  visitor.rs
oasis-std/: Cargo.toml  README.md  Xargo.toml
oasis-std/src/: alloc.rs  build.rs  client.rs  errors.rs  exe.rs  ext.rs  lib.rs  serialize.rs  testing.rs  types.rs
oasis-std/tests/: forum.rs
oasis-test/: Cargo.toml  README.md
oasis-test/src/: ext.rs  lib.rs
oasis-types/: Cargo.toml  README.md
oasis-types/src/: address.rs  balance.rs  blockchain.rs  lib.rs
oasis/src/: lib.rs
tests/: Cargo.toml
tests/ballot/: Cargo.toml
tests/common/: Cargo.toml
tests/ethabi/: Cargo.toml
tests/idl-gen/: Cargo.toml
tests/idl_gen/: Cargo.toml  TestService.json  run_tests.sh
tests/mantle_build/: Cargo.toml  build.rs
tests/res/: NonDefaultFnService.json  ServiceA.json  TestService.json
tests/src/: lib.rs  mock_gateway.rs
tests/testlib/: Cargo.toml
tests/xcc/: Cargo.toml
tests/xcc-a/: Cargo.toml  build.rs
tests/xcc-b/: Cargo.toml  build.rs
(+84 files in other folders)
