[workspace]
members = [
    "bcfs",
    "examples/ballot",
    "examples/erc20",
    "examples/hello-world",
    "examples/messaging",
    "examples/sealed-auctions",
    "memchain",
    "oasis-build",
    "oasis-macros",
    "oasis-rpc",
    "oasis-std",
    "oasis-test",
    "oasis-types",
]
exclude = ["tests"]

[profile.release]
lto = true
opt-level = 3
