[workspace]
members = [
    "bcfs",
    "blockchain-traits",
    "examples/ballot",
    "examples/erc20",
    "examples/hello-world",
    "examples/messaging",
    "map-vec",
    "memchain",
    "oasis-build",
    "oasis-macros",
    "oasis-rpc",
    "oasis-std",
    "oasis-test",
    "oasis-types",
]
exclude = ["tests"]

[profile.release]
lto = true
opt-level = 3

[patch.crates-io]
map-vec = { path = "map-vec" }
oasis-std = { path = "oasis-std" }
oasis-test = { path = "oasis-test" }
borsh = { git = "https://github.com/nhynes/borsh" }
