[workspace]
members = [
    "bcfs",
    "blockchain-traits",
    "examples/ballot",
    "examples/erc20",
    "examples/hello-world",
    "examples/messaging",
    "memchain",
    "oasis-build",
    "oasis-client",
    "oasis-client/tests/res",
    "oasis-macros",
    "oasis-rpc",
    "oasis-std",
    "oasis-test",
    "oasis-types",
]
exclude = ["tests"]

[profile.release]
lto = true
opt-level = 3

[patch.crates-io]
borsh = { git = "https://github.com/oasislabs/borsh" }
oasis-client = { path = "oasis-client" }
oasis-std = { path = "oasis-std" }
oasis-test = { path = "oasis-test" }
