[package]
name = "owasm-abi-derive"
version = "0.4.0"
authors = ["NikVolf <nikvolf@gmail.com>", "Alexey Frolov <alexey@parity.io>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oasislabs/owasm-abi"
documentation = "https://paritytech.github.io/pwasm-abi/pwasm_abi/"
description = "Rust WebAssembly Contracts Abi (derive macros)"
keywords = ["wasm", "parity", "webassembly", "blockchain", "abi"]
categories = ["no-std", "embedded"]
edition = "2018"

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
syn = { version = "0.15", features = ["full", "extra-traits"] }
tiny-keccak = { version = "1.4", default-features = false }

[lib]
proc-macro = true
