[package]
name = "bcfs"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
description = "A virtual filesystem for Blockchain WASI"
repository = "https://github.com/oasislabs/mantle.git"
readme = "README.md"
keywords = ["blockchain", "filesystem", "wasm", "wasi"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
blockchain-traits = { version = "0.1", path = "../blockchain-traits" }
mantle-types = { version = "0.2", path = "../mantle-types" }
wasi-types = "0.1"

[dev-dependencies]
hex = "0.3"
memchain = { version = "0.1", path = "../memchain" }
proptest = "0.9"

[features]
ffi = []
