[package]
name = "bcfs"
version = "0.2.1"
license = "Apache-2.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
description = "A virtual filesystem for Blockchain WASI"
repository = "https://github.com/oasislabs/oasis.git"
readme = "README.md"
keywords = ["blockchain", "filesystem", "wasm", "wasi"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
blockchain-traits = { version = "0.2", path = "../blockchain-traits" }
oasis-types = { version = "0.2", path = "../oasis-types" }
nom = { version = "5.0.0-beta3", default-features = false, features = ["std"] }
wasi-types = "0.1"

[dev-dependencies]
hex = "0.3"
memchain = { version = "0.2", path = "../memchain" }

[features]
ffi = []
