[package]
name = "bcfs"
version = "0.2.5"
license = "Apache-2.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
description = "A virtual filesystem for Blockchain WASI"
repository = "https://github.com/oasislabs/oasis-rs.git"
readme = "README.md"
keywords = ["blockchain", "filesystem", "wasm", "wasi"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
blockchain-traits = { version = "0.2", path = "../blockchain-traits" }
nom = { version = "5.0", default-features = false, features = ["std"] }
oasis-types = { version = "0.3", path = "../oasis-types" }
wasi-types = "0.1"

[dev-dependencies]
hex = "0.4"
memchain = { version = "0.2", path = "../memchain" }
quickcheck = "0.9"

[features]
ffi = []
