[package]
name = "blockchain-traits"
version = "0.1.0"
authors = ["Oasis Labs <info@oasislabs.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A minimal description of a programmable blockchain."
repository = "https://github.com/oasislabs/mantle-rs.git"
readme = "README.md"
keywords = ["blockchain"]
