[package]
name = "idl-gen"
version = "0.1.0"
authors = ["Oasis Labs <info@oasislabs.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Automatically generate interface definitions from Rust types."
repository = "https://github.com/oasislabs/mantle.git"
readme = "README.md"
keywords = ["idl", "interface", "rpc"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.4"
