[package]
name = "oasis-macros"
version = "0.1.0"
authors = ["Oasis Labs <info@oasislabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/oasislabs/oasis-std"
description = "Macros for conveniently using the Oasis platform"
keywords = ["oasis", "blockchain", "heavy magic"]
edition = "2018"

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
serde = "1.0"
serde_derive = "1.0"
syn = { version = "0.15", features = ["full", "extra-traits", "visit-mut"] }
tiny-keccak = "1.4"

[dev-dependencies]
compiletest_rs = "0.3"
either = "1.5"
oasis-std = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.9"

[lib]
proc-macro = true
