[package]
name = "mantle-build"
version = "0.2.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust compiler plugin that builds Mantle services"
repository = "https://github.com/oasislabs/mantle.git"
readme = "README.md"
keywords = ["idl", "interface", "rpc", "plugin"]

[dependencies]
colored = "1.8"
mantle-rpc = { version = "0.1", path = "../mantle-rpc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.4"
walrus = "0.8"

[dev-dependencies]
compiletest_rs = { version = "0.3", features = ["tmp"] }
mantle = { version = "0.2", path = "../mantle" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.9"
