[package]
name = "mantle-test"
version = "0.1.0"
license = "Apache-2.0"
description = "A testing framework for Mantle executables."
edition = "2018"
repository = "https://github.com/oasislabs/mantle-rs.git"
authors = ["Oasis Labs <info@oasislabs.com>"]
readme = "README.md"
keywords = ["mantle", "test", "testing"]

[dependencies]
mantle-macros = { version = "0.1", path = "../mantle-macros" }
mantle = { version = "0.1", path = "../mantle" }
