[package]
name = "mantle-test"
version = "0.1.0"
license = "Apache-2.0"
description = "A testing framework for Mantle executables."
edition = "2018"
repository = "https://github.com/oasislabs/mantle.git"
authors = ["Oasis Labs <info@oasislabs.com>"]
readme = "README.md"
keywords = ["mantle", "test", "testing"]

[dependencies]
mantle = { version = "0.1", path = "../mantle" }
mantle-macros = { version = "0.1", path = "../mantle-macros" }
