[package]
name = "mantle-test"
version = "0.2.0"
license = "Apache-2.0"
description = "A testing framework for Mantle executables."
edition = "2018"
repository = "https://github.com/oasislabs/mantle.git"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
readme = "README.md"
keywords = ["mantle", "test", "testing"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
blockchain-traits = { version = "0.1", path = "../blockchain-traits" }
mantle-macros = { version = "0.2", path = "../mantle-macros" }
mantle-types = { version = "0.2", path = "../mantle-types" }
memchain = { version = "0.1", path = "../memchain" }
