[package]
name = "mantle-types"
version = "0.1.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Types used by the Mantle blockchain framework."
repository = "https://github.com/oasislabs/mantle.git"
readme = "README.md"
keywords = ["blockchain", "mantle"]

[dependencies]
blockchain-traits = { version = "0.1", path = "../blockchain-traits" }
hex = "0.3"
serde = { version = "1.0", features = ["derive"] }
