[package]
name = "mantle"
version = "0.2.1"
license = "Apache-2.0"
description = "A humane programming model for blockchain."
edition = "2018"
repository = "https://github.com/oasislabs/mantle.git"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
readme = "README.md"
keywords = ["mantle"]

[dependencies]
blockchain-traits = { version = "0.2", path = "../blockchain-traits" }
cfg-if = "0.1"
default-env = "0.1"
failure = "0.1"
mantle-macros = { version = "0.2", path = "../mantle-macros" }
mantle-types = { version = "0.2", path = "../mantle-types" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
tiny-keccak = "1.4"

[target.'cfg(target_os = "wasi")'.dependencies]
hex = "0.3"
libc = "0.2"
