[package]
name = "memchain"
version = "0.2.2"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
license = "Apache-2.0"
description = "In-memory blockchain simulator."
repository = "https://github.com/oasislabs/oasis-rs.git"
readme = "README.md"
keywords = ["blockchain", "testing", "ethereum"]

[lib]
crate_type = ["rlib", "cdylib"]

[dependencies]
blockchain-traits = { version = "0.2", path = "../blockchain-traits" }
oasis-types = { version = "0.2", path = "../oasis-types" }

[features]
ffi = []
