[package]
name = "oasis-build"
version = "0.2.2"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust compiler plugin that builds Oasis services"
repository = "https://github.com/oasislabs/oasis-rs.git"
readme = "README.md"
keywords = ["idl", "interface", "rpc", "plugin"]

[dependencies]
colored = "1.8"
failure = "0.1"
heck = "0.3"
oasis-rpc = { version = "0.1", path = "../oasis-rpc", features = ["resolve"] }
proc-macro2 = "0.4"
proc-quote = "0.2"
serde_json = "1.0"
syn = { version = "0.15", default-features = false, features = ["parsing"] }
toml = "0.5"
walrus = "0.8"

[dev-dependencies]
compiletest_rs = { version = "0.3", features = ["tmp"] }
oasis-std = { version = "0.2", path = "../oasis-std" }
serde = { version = "1.0", features = ["derive"] }
