[package]
name = "oasis-build"
version = "0.3.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust compiler plugin that builds Oasis services"
repository = "https://github.com/oasislabs/oasis-rs.git"
readme = "README.md"
keywords = ["idl", "interface", "rpc", "plugin"]
publish = false

[dependencies]
anyhow = "1.0"
colored = "=1.8" # 1.9 doesn't work, for some reason
heck = "0.3"
oasis-rpc = { version = "0.3", path = "../oasis-rpc", features = ["resolve", "visitor"] }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", default-features = false, features = ["parsing"] }
thiserror = "1.0"
toml = "0.5"
walrus = "0.13"

[dev-dependencies]
compiletest_rs = { version = "0.4", features = ["tmp"] }
oasis-std = { version = "0.3", path = "../oasis-std" }
tests = { path = "../tests" }
