[package]
name = "oasis-client"
version = "0.1.1"
license = "Apache-2.0"
description = "Oasis gateway client"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
repository = "https://github.com/oasislabs/oasis-rs"
readme = "README.md"
keywords = ["oasis", "gateway"]

[dependencies]
anyhow = "1.0"
hex = "0.4"
http = "0.1"
log = "0.4"
oasis-types = { version = "0.4", path = "../oasis-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
env_logger = "0.7"
reqwest = "0.9"

[dev-dependencies]
mockito = "0.23"
