[package]
name = "oasis-macros"
version = "0.1.0"
license = "Apache-2.0"
description = "Macros for conveniently using the Oasis platform"
edition = "2018"
repository = "https://github.com/oasislabs/oasis-rs.git"
authors = ["Oasis Labs <info@oasislabs.com>"]
readme = "README.md"
keywords = ["oasis", "blockchain", "heavy magic"]

[dependencies]
proc-macro2 = "0.4"
proc-quote = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "0.15", features = ["full", "extra-traits", "visit-mut"] }
tiny-keccak = "1.4"

[dev-dependencies]
compiletest_rs = { git = "https://github.com/laumann/compiletest-rs", features = ["tmp"] }
oasis-std = { path = "../oasis-std" }
oasis-test = { path = "../oasis-test" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.9"

[lib]
proc-macro = true
