[package]
name = "oasis-macros"
version = "0.2.0"
license = "Apache-2.0"
description = "Macros used internally by the Oasis framework."
edition = "2018"
repository = "https://github.com/oasislabs/oasis-rs.git"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
readme = "README.md"
keywords = ["oasis", "blockchain"]

[dependencies]
proc-macro2 = "0.4"
proc-quote = "0.2"
syn = { version = "0.15", features = ["full", "extra-traits", "visit-mut"] }
tiny-keccak = "1.4"

[lib]
proc-macro = true
