[package]
name = "oasis-macros"
version = "0.2.2"
license = "Apache-2.0"
description = "Macros used internally by the Oasis framework."
edition = "2018"
repository = "https://github.com/oasislabs/oasis-rs.git"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
readme = "README.md"
keywords = ["oasis", "blockchain"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits", "visit-mut"] }
tiny-keccak = "1.4"

[lib]
proc-macro = true
