[package]
name = "oasis-rpc"
version = "0.3.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Oasis RPC IR and utilities"
repository = "https://github.com/oasislabs/oasis-rs.git"
readme = "README.md"
keywords = ["idl", "rpc", "oasis"]

[dependencies]
anyhow = { version = "1.0", optional = true }
libflate = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
url = { version = "2.1", optional = true, features = ["serde"] }
thiserror = "1.0"
wasmparser = { version = "0.42", optional = true }

[features]
visitor = []
resolve = ["import"]
import = ["saveload", "url"]
saveload = ["anyhow", "libflate", "serde_json", "wasmparser"]
