[package]
name = "oasis-std"
version = "0.2.4"
license = "Apache-2.0"
description = "Types and functions for developing against the Oasis platform"
edition = "2018"
repository = "https://github.com/oasislabs/oasis-rs.git"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
readme = "README.md"
keywords = ["oasis"]

[dependencies]
blockchain-traits = { version = "0.2", path = "../blockchain-traits" }
cfg-if = "0.1"
failure = "0.1"
oasis-macros = { version = "0.2", path = "../oasis-macros" }
oasis-types = { version = "0.2", path = "../oasis-types" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
tiny-keccak = "1.4"

[dev-dependencies]
oasis-test = { version = "0.2", path = "../oasis-test" }

[target.'cfg(target_os = "wasi")'.dependencies]
base64 = "0.10"
hex = "0.4"
libc = "0.2"
