[package]
name = "oasis-std"
version = "0.4.0"
license = "Apache-2.0"
description = "Library for developing on the Oasis platform"
edition = "2018"
repository = "https://github.com/oasislabs/oasis-rs"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
readme = "README.md"
keywords = ["oasis"]

[dependencies]
blockchain-traits = { version = "0.4", path = "../blockchain-traits" }
cfg-if = "0.1"
oasis-borsh = "0.2"
oasis-macros = { version = "0.3", path = "../oasis-macros" }
oasis-types = { version = "0.3", path = "../oasis-types", features = ["serde"] }
thiserror = "1.0"
tiny-keccak = "1.4"

[dev-dependencies]
oasis-test = { version = "0.4", path = "../oasis-test" }
rand = "0.7"

[target.'cfg(target_os = "wasi")'.dependencies]
base64 = "0.11"
hex = "0.4"
wasi = "0.7"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
oasis-client = { version = "0.1", path = "../oasis-client" }
oasis-test = { version = "0.4", path = "../oasis-test" }
