[package]
name = "oasis-test"
version = "0.1.0"
license = "Apache-2.0"
description = "A testing framework for Oasis executables."
edition = "2018"
repository = "https://github.com/oasislabs/oasis-rs.git"
authors = ["Oasis Labs <info@oasislabs.com>"]
readme = "README.md"
keywords = ["oasis", "test", "testing"]

[dependencies]
oasis-macros = { version = "0.1", path = "../oasis-macros" }
oasis-std = { version = "0.1", path = "../oasis-std" }
