[package]
name = "oasis-types"
version = "0.2.1"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Types used by the Oasis blockchain framework."
repository = "https://github.com/oasislabs/oasis-rs.git"
readme = "README.md"
keywords = ["blockchain", "oasis"]

[dependencies]
derive_more = "0.15"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_bytes = "0.11"
serde_cbor = "0.10"
