[package]
name = "oasis-types"
version = "0.3.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Types used by the Oasis blockchain framework."
repository = "https://github.com/oasislabs/oasis-rs.git"
readme = "README.md"
keywords = ["blockchain", "oasis"]

[dependencies]
borsh = { version = "0.2", git = "https://github.com/oasislabs/borsh", optional = true }
derive_more = "0.15"
hex = "0.4"
thiserror = "1.0"

[features]
serde = ["borsh"]

[target.'cfg(not(target_os = "wasi"))'.dependencies]
anyhow = "1.0"
