[package]
name = "oasis-std"
version = "0.2.0"
license = "Apache-2.0"
description = "Types and functions for developing against the Oasis platform"
edition = "2018"
repository = "https://github.com/oasislabs/oasis.git"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
readme = "README.md"
keywords = ["oasis"]

[dependencies]
blockchain-traits = { version = "0.2", path = "../blockchain-traits" }
cfg-if = "0.1"
oasis-macros = { version = "0.2", path = "../oasis-macros" }
oasis-types = { version = "0.2", path = "../oasis-types" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
tiny-keccak = "1.4"

[target.'cfg(target_os = "wasi")'.dependencies]
hex = "0.3"
libc = "0.2"
