[package]
name = "ballot"
version = "0.1.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
mantle = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mantle-test = "0.2"

[patch.crates-io]
mantle = { path = "../../mantle" }
mantle-test = { path = "../../mantle-test" }
