[package]
name = "hello-world"
version = "0.1.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
publish = false

[dependencies]
oasis = "0.2"
map_vec = { version = "0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
oasis-test = "0.2"
