[package]
name = "messaging"
version = "0.1.0"
authors = ["Oasis Labs <info@oasislabs.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
mantle = { git = "https://github.com/oasislabs/mantle" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mantle-test = { git = "https://github.com/oasislabs/mantle" }

[build-dependencies]
mantle = { git = "https://github.com/oasislabs/mantle" }

[features]
deploy = []
