[package]
name = "messaging"
version = "0.1.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
mantle = { git = "https://github.com/oasislabs/mantle", branch = "plugin" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mantle-test = { git = "https://github.com/oasislabs/mantle", branch = "plugin" }

[patch."https://github.com/oasislabs/mantle"]
mantle = { path = "../../mantle" }
mantle-test = { path = "../../mantle-test" }
